# abacus

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  codecov.yml  release.yml
src/: cli.rs  colors.rs  eval.rs  lib.rs  main.rs  repl.rs  runner.rs
src/eval/: error.rs  mod.rs
src/interpreter/: engine.rs  env.rs  error.rs  mod.rs  values.rs
src/lexer/: error.rs  mod.rs  token.rs
src/parser/: ast.rs  error.rs  mod.rs
src/ui/: colors.rs  style.rs
tests/: cli.rs  cli_integration.rs  no_color.rs  prompt_transcript.rs
