[package]
name = "abacus"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A tiny, expressive calculator language with a friendly REPL and pattern-matched functions."
repository = "https://github.com/cyanboy/abacus"
homepage = "https://github.com/cyanboy/abacus"
documentation = "https://docs.rs/abacus"
readme = "README.md"
keywords = ["calculator", "language", "repl", "functional"]
categories = ["command-line-utilities", "compilers"]
default-run = "abc"

[dependencies]
miette = { version = "7.6.0", features = ["fancy", "derive"] }
rustyline = "17.0.2"
thiserror = "2.0.17"
unicode-width = "0.1"

[[bin]]
name = "abc"
path = "src/main.rs"
